# cmake-note

./: README.md
examples/basics/example01-hello/: CMakeLists.txt  build.sh
examples/basics/example01-hello-world/: CMakeLists.txt  build.sh
examples/basics/example02-add-subdirectory/: CMakeLists.txt  build.sh  main.cpp
examples/basics/example02-add-subdirectory/calc/: CMakeLists.txt  calc.cpp  calc.h
examples/basics/example02-add-subdirectory/hello/: CMakeLists.txt  hello.cpp  hello.h
examples/basics/example02-subdirectory/: CMakeLists.txt  build.sh
examples/basics/example02-subdirectory/calc/: CMakeLists.txt
examples/basics/example03-ctest-no-framework/src/: calc.h  main.cpp
examples/basics/example03-ctest-no-framework/test/: CMakeLists.txt  calc_test.cpp  unit_tests.cpp
examples/basics/example03-libraries/build_libraries/: CMakeLists.txt  build.sh
examples/basics/example03-libraries/use_libraries/: CMakeLists.txt  build.sh  main.cpp  main_moudle.cpp
examples/ctest/example03-ctest-no-framework/: CMakeLists.txt  build.sh
examples/ctest/example03-ctest-no-framework/src/: CMakeLists.txt  calc.cpp
examples/environment/msys2/: msys2.md
